--- a/mod_diavgeia/language/el-GR/el-GR.mod_diavgeia.ini
+++ b/mod_diavgeia/language/el-GR/el-GR.mod_diavgeia.ini
@@ -1,6 +1,8 @@
 ;Back-end
 MOD_DIAVGEIA="Δι@ύγεια Module"
 MOD_DIAVGEIA_XML_DESCRIPTION="Αυτό το ένθεμα χρησιμοποιείται για να καλεί αποφάσεις από τη Διαύγεια βάσει προκαθορισμένων ρυθμίσεων."
+MOD_DIAVGEIA_INTRO_TEXT="Εισαγωγικό Κείμενο"
+MOD_DIAVGEIA_INTRO_TEXT_DESC="Κείμενο που θα εμφανίζεται στην αρχή του ενθέματος, πριν τα αποτελέσματα της Διαύγειας"
 MOD_DIAVGEIA_KEYWORDS="Λέξεις-κλειδιά προς αναζήτηση"
 MOD_DIAVGEIA_KEYWORDS_DESC="Συμπληρώστε τις λέξεις-κλειδιά που επιθυμείτε να αναζητούνται στη Διαύγεια"
 MOD_DIAVGEIA_NUM_DECISIONS="Αριθμός αποφάσεων προς προβολή"
