--- a/mod_diavgeia/language/en-GB/mod_diavgeia.ini
+++ b/mod_diavgeia/language/en-GB/mod_diavgeia.ini
@@ -1,6 +1,8 @@
 ;Back-end
 MOD_DIAVGEIA="Diavgeia Module"
 MOD_DIAVGEIA_XML_DESCRIPTION="This module is used for retrieving data from diavgeia.gov.gr based on defined rules."
+MOD_DIAVGEIA_INTRO_TEXT="Intro text"
+MOD_DIAVGEIA_INTRO_TEXT_DESC="Text to be displayed at the top of the module, before the Diavgeia decisions"
 MOD_DIAVGEIA_KEYWORDS="Keywords to Search"
 MOD_DIAVGEIA_KEYWORDS_DESC="Enter the desired keywords to search in Diavgeia"
 MOD_DIAVGEIA_NUM_DECISIONS="Number of Decisions to Retrieve"
