--- a/mod_diavgeia/language/el-GR/el-GR.mod_diavgeia.sys.ini
+++ b/mod_diavgeia/language/el-GR/el-GR.mod_diavgeia.sys.ini
@@ -1,2 +1,2 @@
 MOD_DIAVGEIA="Δι@ύγεια Module"
-MOD_DIAVGEIA_XML_DESCRIPTION="Αυτό το ένθεμα χρησιμοποιείται για να καλεί αποφάσεις από τη Διαύγεια βάσει προκαθορισμένων ρυθμίσεων."
+MOD_DIAVGEIA_XML_DESCRIPTION="Αυτό το ένθεμα χρησιμοποιείται για να καλεί πράξεις από τη Διαύγεια βάσει προκαθορισμένων ρυθμίσεων."
