--- a/mod_diavgeia/language/el-GR/el-GR.mod_diavgeia.ini
+++ b/mod_diavgeia/language/el-GR/el-GR.mod_diavgeia.ini
@@ -1,17 +1,17 @@
 ;Back-end
 MOD_DIAVGEIA="Δι@ύγεια Module"
-MOD_DIAVGEIA_XML_DESCRIPTION="Αυτό το ένθεμα χρησιμοποιείται για να καλεί αποφάσεις από τη Διαύγεια βάσει προκαθορισμένων ρυθμίσεων."
+MOD_DIAVGEIA_XML_DESCRIPTION="Αυτό το ένθεμα χρησιμοποιείται για να καλεί πράξεις από τη Διαύγεια βάσει προκαθορισμένων ρυθμίσεων."
 MOD_DIAVGEIA_INTRO_TEXT="Εισαγωγικό Κείμενο"
 MOD_DIAVGEIA_INTRO_TEXT_DESC="Κείμενο που θα εμφανίζεται στην αρχή του ενθέματος, πριν τα αποτελέσματα της Διαύγειας"
 MOD_DIAVGEIA_KEYWORDS="Λέξεις-κλειδιά προς αναζήτηση"
 MOD_DIAVGEIA_KEYWORDS_DESC="Συμπληρώστε τις λέξεις-κλειδιά που επιθυμείτε να αναζητούνται στη Διαύγεια"
-MOD_DIAVGEIA_NUM_DECISIONS="Αριθμός αποφάσεων προς προβολή"
-MOD_DIAVGEIA_NUM_DECISIONS_DESC="Συμπληρώστε τον αριθμό των αποφάσεων που θέλετε να εμφανίζονται στο ένθεμα"
+MOD_DIAVGEIA_NUM_DECISIONS="Αριθμός πράξεων προς προβολή"
+MOD_DIAVGEIA_NUM_DECISIONS_DESC="Συμπληρώστε τον αριθμό των πράξεων που θέλετε να εμφανίζονται στο ένθεμα"
 MOD_DIAVGEIA_ORGANIZATION="Φορέας"
 MOD_DIAVGEIA_ORGANIZATION_DISPLAY_LABEL="Προβολή Φορέα"
 MOD_DIAVGEIA_ORGANIZATION_DISPLAY_LABEL_DESC="Παρακαλούμε επιλέξτε αν επιθυμείτε να εμφανίζεται και ο φορέας σε κάθε πράξη"
 MOD_DIAVGEIA_ADA_DISPLAY="Προβολή ΑΔΑ (με σύνδεσμο)"
 MOD_DIAVGEIA_ADA="ΑΔΑ"
 ;Front-end
-MOD_DIAVGEIA_NO_DECISIONS="Δεν βρέθηκαν αποφάσεις."
+MOD_DIAVGEIA_NO_DECISIONS="Δεν βρέθηκαν πράξεις."
 
