--- a/mod_diavgeia/language/en-GB/mod_diavgeia.ini
+++ b/mod_diavgeia/language/en-GB/mod_diavgeia.ini
@@ -8,9 +8,9 @@ MOD_DIAVGEIA_KEYWORDS_DESC="Enter the desired keywords to search in Diavgeia"
 MOD_DIAVGEIA_NUM_DECISIONS="Number of Decisions to Retrieve"
 MOD_DIAVGEIA_NUM_DECISIONS_DESC="Enter the number of decisions to be displayed in the module"
 MOD_DIAVGEIA_ORGANIZATION="Organization"
-MOD_DIAVGEIA_ORGANIZATION_DISPLAY_LABEL="Display Organization"
+MOD_DIAVGEIA_ORGANIZATION_DISPLAY_LABEL="Organization"
 MOD_DIAVGEIA_ORGANIZATION_DISPLAY_LABEL_DESC="Please choose whether you would like to display the organization below each decision"
-MOD_DIAVGEIA_ADA_DISPLAY="Display ADA (with link)"
+MOD_DIAVGEIA_ADA_DISPLAY="ADA (with link)"
 MOD_DIAVGEIA_ADA="ADA"
 
 ;Front-end
